fix(form-control): Make checkbox correctly aligned within horizontal view #BQ-5363

--- a/src/app/modules/container/container.component.scss
+++ b/src/app/modules/container/container.component.scss
@@ -15,6 +15,9 @@
 .grid-item {
   flex: 1;
   margin-right: 10px;
+  // Make every element align in center with grid + center
+  display: grid;
+  align-items: center;
 }
 
 @mixin top-container {
